--- a/sanity/package.json
+++ b/sanity/package.json
@@ -21,11 +21,14 @@
     "@sanity/default-login": "^1.149.0",
     "@sanity/desk-tool": "^1.149.3",
     "@sanity/vision": "^1.149.0",
+    "get-youtube-id": "^1.0.1",
     "prop-types": "^15.6",
     "react": "^16.2",
-    "react-dom": "^16.2"
+    "react-dom": "^16.2",
+    "react-youtube": "^7.9.0"
   },
   "devDependencies": {
-    "eslint": "^6.8.0"
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.19.0"
   }
 }
