--- a/sanity/.eslintrc.json
+++ b/sanity/.eslintrc.json
@@ -37,6 +37,10 @@
         ],
         "no-unused-vars": [
             "warn"
+        ],
+        "eol-last": [
+            "error",
+            "always"
         ]
     }
 }
