--- a/sanity/.eslintrc.json
+++ b/sanity/.eslintrc.json
@@ -7,6 +7,11 @@
         "eslint:recommended",
         "plugin:react/recommended"
     ],
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
