--- a/app/package.json
+++ b/app/package.json
@@ -11,9 +11,16 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "apollo-boost": "^0.4.7",
+    "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.19.45",
+    "gatsby-plugin-styled-components": "^3.2.1",
+    "graphql": "^14.6.0",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
