--- a/app/package.json
+++ b/app/package.json
@@ -24,7 +24,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-youtube": "^7.9.0",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
