--- a/app/package.json
+++ b/app/package.json
@@ -21,11 +21,13 @@
     "gatsby-plugin-styled-components": "^3.2.1",
     "graphql": "^14.6.0",
     "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-youtube": "^7.9.0",
     "styled-components": "^5.0.1",
-    "styled-normalize": "^8.0.7"
+    "styled-normalize": "^8.0.7",
+    "typeface-roboto": "0.0.75"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
