--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,8 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.19.0"
+    "eslint-plugin-react": "^7.19.0",
+    "stylelint": "^13.2.1",
+    "stylelint-order": "^4.0.0"
   }
 }
