Add palette, refactor components to use colors from palette and only allow JS colors in CSS

--- a/app/.stylelintrc.json
+++ b/app/.stylelintrc.json
@@ -3,6 +3,8 @@
 		"stylelint-order"
 	],
 	"rules": {
+		"color-named": "never",
+		"color-no-hex": true,
 		"order/order": [
 			"custom-properties",
 			"declarations"
