--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "graphql": "^14.6.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.15",
+    "polished": "^3.5.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-youtube": "^7.9.0",
