--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "apollo-boost": "^0.4.7",
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.19.45",
+    "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-create-client-paths": "^2.2.1",
     "gatsby-plugin-styled-components": "^3.2.1",
     "graphql": "^14.6.0",
@@ -27,7 +28,7 @@
     "react-youtube": "^7.9.0",
     "styled-components": "^5.0.1",
     "styled-normalize": "^8.0.7",
-    "typeface-roboto": "0.0.75"
+    "yorha": "file:../yorha"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
