--- a/sanity/.eslintrc.json
+++ b/sanity/.eslintrc.json
@@ -46,6 +46,10 @@
         "eol-last": [
             "error",
             "always"
+        ],
+        "jsx-quotes": [
+            "error",
+            "prefer-double"
         ]
     }
 }
