--- a/yorha/package.json
+++ b/yorha/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "lodash": "^4.17.15",
     "polished": "^3.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -27,6 +28,7 @@
     "babel-loader": "^8.1.0",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.19.0",
+    "resize-observer-polyfill": "^1.5.1",
     "stylelint": "^13.2.1",
     "stylelint-order": "^4.0.0"
   }
