--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "personal-website",
   "version": "1.1.0",
   "description": "",
+  "private": true,
   "main": "package.json",
   "scripts": {
     "test": "echo 'Hello World!'"
@@ -10,6 +11,9 @@
     "type": "git",
     "url": "git+https://github.com/tommyquant/personal-website.git"
   },
+  "workspaces": [
+    "packages/*"
+  ],
   "author": "Tommy Tran",
   "license": "ISC",
   "bugs": {
