--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "personal-website-app",
+  "name": "app",
   "private": true,
   "description": "A simplified bare-bones starter for Gatsby",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -17,7 +17,6 @@
     "apollo-boost": "^0.4.7",
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.19.45",
-    "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-create-client-paths": "^2.2.1",
     "gatsby-plugin-styled-components": "^3.2.1",
     "graphql": "^14.6.0",
@@ -28,7 +27,7 @@
     "react-youtube": "^7.9.0",
     "styled-components": "^5.0.1",
     "styled-normalize": "^8.0.7",
-    "yorha": "file:../yorha"
+    "yorha": "0.0.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
