--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -6,8 +6,8 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "watch": "gatsby develop",
-    "serve": "gatsby serve",
+    "watch": "gatsby develop --host 0.0.0.0 --port 80",
+    "serve": "gatsby serve --host 0.0.0.0 --port 80",
     "clean": "gatsby clean"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.19.45",
     "gatsby-plugin-create-client-paths": "^2.2.1",
+    "gatsby-plugin-env-variables": "^1.0.1",
     "gatsby-plugin-styled-components": "^3.2.1",
     "graphql": "^14.6.0",
     "isomorphic-fetch": "^2.2.1",
