--- a/packages/yorha/package.json
+++ b/packages/yorha/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "build": "build-storybook -o public/storybook",
-    "watch": "start-storybook -p 9001"
+    "build": "build-storybook --output-dir public/storybook",
+    "watch": "start-storybook --host 0.0.0.0 --port 80"
   },
   "author": "",
   "license": "ISC",
