--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3'
 
 services:
   app:
-    image: node:13.12-alpine
+    build: .
+    image: quant-develop
     environment:
       - NODE_ENV=development
       - SANITY_STUDIO_API_PROJECT_ID
@@ -14,11 +15,13 @@ services:
     command: sh -c "cd /app/packages/app && npm run watch"
 
   sanity:
-    image: node:13.12-alpine
+    build: .
+    image: quant-develop
     environment:
       - NODE_ENV=development
       - SANITY_STUDIO_API_PROJECT_ID
       - SANITY_STUDIO_API_DATASET
+      - SANITY_STUDIO_PROJECT_BASEPATH
     ports:
       - "3333:80"
     volumes:
@@ -26,7 +29,8 @@ services:
     command: sh -c "cd /app/packages/sanity && npm run watch"
 
   yorha:
-    image: node:13.12-alpine
+    build: .
+    image: quant-develop
     environment:
       - NODE_ENV=development
     ports:
