--- a/packages/sanity/package.json
+++ b/packages/sanity/package.json
@@ -2,18 +2,12 @@
   "name": "sanity",
   "private": true,
   "version": "0.0.0",
-  "description": "",
-  "main": "package.json",
-  "author": "Tommy Quant <tommyquant@gmail.com>",
   "license": "UNLICENSED",
   "scripts": {
-    "build": "sanity build public/studio --yes",
+    "build": "sanity build",
     "test": "sanity check",
     "watch": "sanity start --host 0.0.0.0 --port 80"
   },
-  "keywords": [
-    "sanity"
-  ],
   "dependencies": {
     "@sanity/base": "^1.149.3",
     "@sanity/components": "^1.149.3",
