--- a/packages/yorha/package.json
+++ b/packages/yorha/package.json
@@ -1,13 +1,10 @@
 {
   "name": "yorha",
   "version": "0.0.0",
-  "description": "",
-  "main": "src/index.js",
   "scripts": {
-    "build": "build-storybook --output-dir public/storybook",
+    "build": "build-storybook",
     "watch": "start-storybook --host 0.0.0.0 --port 80"
   },
-  "author": "",
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.17.15",
