--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "watch": "gatsby develop --host 0.0.0.0 --port 80",
-    "serve": "gatsby serve --host 0.0.0.0 --port 80",
+    "watch": "gatsby develop",
+    "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
   "dependencies": {
