--- a/packages/sanity/package.json
+++ b/packages/sanity/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "sanity build",
     "test": "sanity check",
-    "watch": "sanity start --host 0.0.0.0 --port 80"
+    "watch": "sanity start"
   },
   "dependencies": {
     "@sanity/base": "^1.149.3",
