--- a/packages/yorha/package.json
+++ b/packages/yorha/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "build": "build-storybook",
-    "watch": "start-storybook --host 0.0.0.0 --port 80"
+    "watch": "start-storybook"
   },
   "license": "ISC",
   "dependencies": {
