Remove Docker and Gulp. Set up monorun package.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "eslint.workingDirectories": [
         "app",
         "sanity",
-        "yorha"
+        "yorha",
+        "runner"
     ]
 }
