--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.1.0",
   "private": true,
   "scripts": {
-    "task": "gulp"
+    "serve": "npx serve -l 3333 public"
   },
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "monorun"
   ],
-  "devDependencies": {
-    "fs-extra": "^9.0.0",
-    "gulp": "^4.0.2"
+  "dependencies": {
+    "monorun": "0.0.0"
   }
 }
