--- a/packages/yorha/package.json
+++ b/packages/yorha/package.json
@@ -26,6 +26,7 @@
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.19.0",
     "resize-observer-polyfill": "^1.5.1",
+    "string-replace-loader": "^2.3.0",
     "stylelint": "^13.2.1",
     "stylelint-order": "^4.0.0"
   }
