--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,6 @@
     "eslint.workingDirectories": [
         "app",
         "sanity",
-        "yorha",
-        "runner"
+        "yorha"
     ]
 }
