--- a/packages/yorha/package.json
+++ b/packages/yorha/package.json
@@ -1,13 +1,10 @@
 {
   "name": "yorha",
   "version": "0.0.0",
-  "description": "",
-  "main": "src/index.js",
   "scripts": {
-    "build": "build-storybook --output-dir public/storybook",
-    "watch": "start-storybook --host 0.0.0.0 --port 80"
+    "build": "build-storybook",
+    "watch": "start-storybook"
   },
-  "author": "",
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.17.15",
@@ -29,6 +26,7 @@
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.19.0",
     "resize-observer-polyfill": "^1.5.1",
+    "string-replace-loader": "^2.3.0",
     "stylelint": "^13.2.1",
     "stylelint-order": "^4.0.0"
   }
