--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "dependencies": {
     "cross-spawn": "^7.0.2",
+    "deepmerge": "^4.2.2",
     "dotenv": "^8.2.0",
     "fs-extra": "^9.0.0",
     "gulp": "^4.0.2",
