--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -23,6 +23,7 @@
     "polished": "^3.5.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-syntax-highlighter": "^12.2.1",
     "react-youtube": "^7.9.0",
     "styled-components": "^5.0.1",
     "styled-normalize": "^8.0.7",
