--- a/packages/sanity/package.json
+++ b/packages/sanity/package.json
@@ -5,6 +5,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "sanity build",
+    "deploy-graphql": "sanity graphql deploy",
     "test": "sanity check",
     "watch": "sanity start"
   },
@@ -19,7 +20,8 @@
     "prop-types": "^15.6",
     "react": "^16.2",
     "react-dom": "^16.2",
-    "react-youtube": "^7.9.0"
+    "react-youtube": "^7.9.0",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@sanity/cli": "^1.149.9",
