--- a/packages/app/.eslintrc.json
+++ b/packages/app/.eslintrc.json
@@ -28,7 +28,7 @@
         "indent": ["error", 4, {"SwitchCase": 1}],
         "linebreak-style": [
             "error",
-            "windows"
+            "unix"
         ],
         "quotes": [
             "error",
