--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -25,14 +25,14 @@
     "react-dom": "^16.12.0",
     "react-syntax-highlighter": "^12.2.1",
     "react-youtube": "^7.9.0",
-    "styled-components": "^5.0.1",
+    "styled-components": "5.1.0",
     "styled-normalize": "^8.0.7",
     "yorha": "0.0.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.19.0",
-    "stylelint": "^13.2.1",
+    "stylelint": "^13.3.3",
     "stylelint-order": "^4.0.0"
   }
 }
