--- a/packages/sanity/package.json
+++ b/packages/sanity/package.json
@@ -21,7 +21,7 @@
     "react": "^16.2",
     "react-dom": "^16.2",
     "react-youtube": "^7.9.0",
-    "styled-components": "^5.1.0"
+    "styled-components": "5.1.0"
   },
   "devDependencies": {
     "@sanity/cli": "^1.149.9",
