--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -17,12 +17,14 @@
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.19.45",
     "gatsby-plugin-create-client-paths": "^2.2.1",
+    "gatsby-plugin-react-helmet": "^3.2.4",
     "gatsby-plugin-styled-components": "^3.2.1",
     "graphql": "^14.6.0",
     "isomorphic-fetch": "^2.2.1",
     "polished": "^3.5.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.0.0",
     "react-syntax-highlighter": "^12.2.1",
     "react-youtube": "^7.9.0",
     "styled-components": "5.1.0",
