--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -21,11 +21,12 @@
     "gatsby-plugin-styled-components": "^3.2.1",
     "graphql": "^14.6.0",
     "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.17.15",
     "polished": "^3.5.1",
+    "prism-react-renderer": "^1.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
-    "react-syntax-highlighter": "^12.2.1",
     "react-youtube": "^7.9.0",
     "styled-components": "5.1.0",
     "styled-normalize": "^8.0.7",
