--- a/packages/sanity/package.json
+++ b/packages/sanity/package.json
@@ -17,6 +17,8 @@
     "@sanity/default-login": "^1.149.0",
     "@sanity/desk-tool": "^1.149.3",
     "@sanity/vision": "^1.149.0",
+    "prism-react-renderer": "^1.1.0",
+    "prismjs": "^1.20.0",
     "prop-types": "^15.6",
     "react": "^16.2",
     "react-dom": "^16.2",
