Update linting configs

--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "fs-extra": "^9.0.0",
     "gulp": "^4.0.2",
     "npm-run-path": "^4.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.2.0",
+    "eslint-config-tq": "https://github.com/tommyquant/eslint-config-tq.git"
   }
 }
