--- a/packages/yorha/.eslintrc.json
+++ b/packages/yorha/.eslintrc.json
@@ -1,56 +1,6 @@
 {
-    "env": {
-        "browser": true,
-        "es6": true,
-        "node": true
-    },
     "extends": [
-        "eslint:recommended",
+        "eslint-config-tq",
         "plugin:react/recommended"
-    ],
-    "settings": {
-        "react": {
-            "version": "detect"
-        }
-    },
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 2018,
-        "sourceType": "module"
-    },
-    "rules": {
-        "indent": ["error", 4, {"SwitchCase": 1}],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ],
-        "no-console": [
-            "warn"
-        ],
-        "no-unused-vars": [
-            "warn"
-        ],
-        "eol-last": [
-            "error",
-            "always"
-        ],
-        "jsx-quotes": [
-            "error",
-            "prefer-double"
-        ]
-    }
+    ]
 }
