--- a/packages/yorha/.stylelintrc.json
+++ b/packages/yorha/.stylelintrc.json
@@ -1,14 +1,3 @@
 {
-    "plugins": [
-		"stylelint-order"
-	],
-	"rules": {
-		"color-named": "never",
-		"color-no-hex": true,
-		"order/order": [
-			"custom-properties",
-			"declarations"
-		],
-		"order/properties-alphabetical-order": true
-	}
+    "extends": "stylelint-config-tq"
 }
