--- a/packages/yorha/package.json
+++ b/packages/yorha/package.json
@@ -23,11 +23,12 @@
     "@storybook/addons": "^5.3.17",
     "@storybook/react": "^5.3.17",
     "babel-loader": "^8.1.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.19.0",
+    "eslint": "^7.2.0",
+    "eslint-config-tq": "https://github.com/tommyquant/eslint-config-tq.git",
+    "eslint-plugin-react": "^7.20.0",
     "resize-observer-polyfill": "^1.5.1",
     "string-replace-loader": "^2.3.0",
-    "stylelint": "^13.3.3",
-    "stylelint-order": "^4.0.0"
+    "stylelint": "^13.6.0",
+    "stylelint-config-tq": "https://github.com/tommyquant/stylelint-config-tq.git"
   }
 }
